--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,14 @@ set -g mouse-utf8 on
 # 兼容vi的操作方式
 setw -g mode-keys vi
 
+# 重新定义上下左右，符合vim习惯
+# prefix + " : 水平分屏，用一条水平线把当前窗口分成上下两屏。
+# prefix + % : 垂直分屏，用一条垂线把当前窗口分成左右两屏。 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # 状态栏
 # 颜色
 set -g status-bg black
